breadcrumb spacing fix

--- a/src/components/article-components/breadcrumbs/Breadcrumbs.scss
+++ b/src/components/article-components/breadcrumbs/Breadcrumbs.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    row-gap: 5px;
     a {
         // font-family: 'Slate Pro';
         font-style: normal;
